# xash3d-fwgs

./: .gitignore  .gitmodules
contrib/velaron/: CMakeLists.txt
contrib/velaron/android/: .gitignore
contrib/velaron/android/app/: build.gradle
contrib/velaron/android/app/src/main/: AndroidManifest.xml
contrib/velaron/android/app/src/main/assets/: extras.pak
contrib/velaron/android/app/src/main/res/layout/: activity_fpicker.xml
contrib/velaron/cmake/: FindSDL2.cmake
contrib/velaron/engine/: CMakeLists.txt
contrib/velaron/game_launch/: CMakeLists.txt
contrib/velaron/hlsdk-xash3d/: CMakeLists.txt
contrib/velaron/hlsdk-xash3d/cl_dll/: CMakeLists.txt
contrib/velaron/hlsdk-xash3d/dlls/: CMakeLists.txt
contrib/velaron/mainui/: CMakeLists.txt
contrib/velaron/public/: CMakeLists.txt
contrib/velaron/ref_gl/: CMakeLists.txt
contrib/velaron/ref_gl/gl-wes-v2/: CMakeLists.txt
contrib/velaron/ref_gl/nanogl/: CMakeLists.txt
contrib/velaron/ref_soft/: CMakeLists.txt
contrib/velaron/vgui_support/: CMakeLists.txt
engine/client/: input.c
engine/client/vgui/: vgui_draw.c
engine/platform/win32/: lib_win.c
