cmake_minimum_required(VERSION 2.8.0)
project(server C CXX)

set(XASH_SDK_SERVER_SRC_DIR "${XASH_SDK_DIR}/dlls")
set(XASH_SDK_SERVER server)

include(CheckIncludeFile)
check_include_file("tgmath.h" HAVE_TGMATH_H)
if(HAVE_TGMATH_H)
	add_definitions(-DHAVE_TGMATH_H)
endif()

add_definitions(-DCLIENT_WEAPONS)
add_definitions(-D_LINUX -DLINUX)
add_definitions(-Dstricmp=strcasecmp -Dstrnicmp=strncasecmp -D_snprintf=snprintf -D_vsnprintf=vsnprintf)
add_definitions(-DNO_VOICEGAMEMGR)

set(XASH_SDK_SERVER_SRC
	"${XASH_SDK_SERVER_SRC_DIR}/agrunt.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/airtank.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/aflock.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/animating.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/animation.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/apache.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/barnacle.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/barney.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/bigmomma.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/bloater.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/bmodels.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/bullsquid.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/buttons.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/cbase.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/client.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/combat.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/controller.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/crossbow.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/crowbar.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/defaultai.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/doors.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/effects.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/egon.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/explode.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/flyingmonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/func_break.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/func_tank.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/game.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/gamerules.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/gargantua.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/gauss.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/genericmonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/ggrenade.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/globals.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/glock.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/gman.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/h_ai.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/h_battery.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/h_cine.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/h_cycler.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/h_export.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/handgrenade.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/hassassin.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/headcrab.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/healthkit.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/hgrunt.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/hornet.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/hornetgun.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/houndeye.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/ichthyosaur.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/islave.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/items.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/leech.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/lights.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/maprules.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/monstermaker.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/monsters.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/monsterstate.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/mortar.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/mp5.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/multiplay_gamerules.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/nihilanth.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/nodes.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/observer.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/osprey.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/pathcorner.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/plane.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/plats.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/player.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/playermonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/python.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/rat.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/roach.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/rpg.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/satchel.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/schedule.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/scientist.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/scripted.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/shotgun.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/singleplay_gamerules.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/skill.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/sound.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/soundent.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/spectator.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/squadmonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/squeakgrenade.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/subs.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/talkmonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/teamplay_gamerules.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/tempmonster.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/tentacle.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/triggers.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/tripmine.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/turret.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/util.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/weapons.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/world.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/xen.cpp"
	"${XASH_SDK_SERVER_SRC_DIR}/zombie.cpp"
	"${XASH_SDK_DIR}/pm_shared/pm_debug.c"
	"${XASH_SDK_DIR}/pm_shared/pm_math.c"
	"${XASH_SDK_DIR}/pm_shared/pm_shared.c"
)

include_directories(
	"${XASH_SDK_SERVER_SRC_DIR}/"
	"${XASH_SDK_SERVER_SRC_DIR}/wpn_shared"
	"${XASH_SDK_DIR}/common"
	"${XASH_SDK_DIR}/engine"
	"${XASH_SDK_DIR}/pm_shared"
	"${XASH_SDK_DIR}/game_shared"
	"${XASH_SDK_DIR}/public"
)

add_library (${XASH_SDK_SERVER} MODULE ${XASH_SDK_SERVER_SRC})
